<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sohyun_mac.layoutpractice.LinearActivity">

    <TextView
        android:id="@+id/view_hor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/linear_hor"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layout_hor"/>

    <LinearLayout
        android:id="@+id/layout_hor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/view_hor"
        app:layout_constraintBottom_toTopOf="@id/view_vert">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/one"
            android:textSize="25sp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/colorAccent"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/two"
            android:textSize="25sp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/colorPrimary"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/three"
            android:textSize="25sp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/colorAccent"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/four"
            android:textSize="25sp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/colorPrimary"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/five"
            android:textSize="25sp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/colorAccent"/>

    </LinearLayout>

    <TextView
        android:id="@+id/view_vert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/linear_vert"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/layout_hor"
        app:layout_constraintBottom_toTopOf="@id/layout_vert"/>

    <LinearLayout
        android:id="@+id/layout_vert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/view_vert"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/one"
            android:textSize="25sp"
            android:gravity="center"
            android:background="@color/colorPrimary"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/two"
            android:textSize="25sp"
            android:gravity="center"
            android:background="@color/colorAccent"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/three"
            android:textSize="25sp"
            android:gravity="center"
            android:background="@color/colorPrimary"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/four"
            android:textSize="25sp"
            android:gravity="center"
            android:background="@color/colorAccent"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/five"
            android:textSize="25sp"
            android:gravity="center"
            android:background="@color/colorPrimary"/>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
